--- a/LeisureMap-OC/LeisureMap-OC/www/sample.html
+++ b/LeisureMap-OC/LeisureMap-OC/www/sample.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>学院举办“抵制校园不良网贷 共同防范网络诈骗”专题活动</title>
+    <title>八大菜系介绍</title>
     <meta content = "yes"
           name = "apple-mobile-web-app-capable"/>
     <meta content = "yes"
@@ -38,26 +38,29 @@
 
 <body>
 
-<h1 class = "title">勿忘国耻，振兴中华——大江晚报报道我校学生纪念“九一八”活动</h1>
+<h1 class = "title">八大菜系</h1>
 
-<h2 class = "title">2018-09-19 10:39    &nbsp; &nbsp;  来源：团委   &nbsp; &nbsp;通讯员：张物流</h2>
+<h2 class = "title">2018-09-21 10:39    &nbsp; &nbsp;  来源：百度   &nbsp; &nbsp;通讯员：张物流</h2>
 
 
 <div class = "content">
 
     <p style = "text-indent: 2em;">
-        <img src = "images/sm.jpg"/>
+        <img src = "images/cx.jpg"/>
 	</p>
 
     <p style = "margin-top: 1em; margin-bottom: 0px; color: rgb(37, 37, 37); font-family: 'Microsoft YaHei', tahoma, arial, simsun; line-height: 32px; white-space: normal; text-indent: 2em;">
-        87年前，震惊中外的“九一八”事变爆发，9月18日，学校举行活动纪念“九一八”事变87周年，激励广大师生铭记历史、勿忘国耻，理性报国、振兴中华。</p>
+        菜系，又称“帮菜”，是指在选料、切配、烹饪等技艺方面，经长期演变而自成体系，具有鲜明的地方风味特色，并为社会所公认的中国饮食的菜肴流派。</p>
 
     <p style = "margin-top: 1em; margin-bottom: 0px; color: rgb(37, 37, 37); font-family: 'Microsoft YaHei', tahoma, arial, simsun; line-height: 32px; white-space: normal; text-indent: 2em;">
-        迎着中午的烈日，来自校学生会、社团联合会、艺术团和广播台的学生干部们在学校国旗台前铺开活动条幅，条幅上“勿忘国耻、振兴中华”的标语庄严肃穆，路过的老师和同学们被现场的气氛打动，纷纷驻足签名，当天的活动有千余名师生的参与。得到了芜湖《大江晚报》的关注和报道。</p>
+        中国饮食文化的菜系，是指在一定区域内，由于气候、地理、历史、物产及饮食风俗的不同，经过漫长历史演变而形成的一整套自成体系的烹饪技艺和风味，并被全国各地所承认的地方菜肴。</p>
 
     <p style = "margin-top: 1em; margin-bottom: 0px; color: rgb(37, 37, 37); font-family: 'Microsoft YaHei', tahoma, arial, simsun; line-height: 32px; white-space: normal; text-indent: 2em;">
-        “距离‘九一八’事变已经过去了87年，这段漫长而沉重的历史提醒我们，和平来之不易。活动现场的同学们痛斥87年前日本帝国主义对华野蛮侵略行径，纷纷表示，要牢记历史，不忘国耻，汲取“落后就要挨打”的历史教训，将爱国热情转化为学习动力。</p>
+        早在商周时期中国的膳食文化已有雏形，以太公望最为代表，再到春秋战国的齐桓公时期，饮食文化中南北菜肴风味就表现出差异。到唐宋时，南食、北食各自形成体系。到了南宋时期，南甜北咸的格局形成。发展到清代初期时，鲁菜、川菜、粤菜、苏菜，成为当时最有影响的地方菜，被称作“四大菜系”。到清末时，浙菜、闽菜、湘菜、徽菜四大新地方菜系分化形成，共同构成中国传统饮食的“八大菜系”。</p>
 
+    <p style = "margin-top: 1em; margin-bottom: 0px; color: rgb(37, 37, 37); font-family: 'Microsoft YaHei', tahoma, arial, simsun; line-height: 32px; white-space: normal; text-indent: 2em;">
+        除八大菜系外还有一些在中国较有影响的细分菜系，潮州菜，东北菜，本帮菜，赣菜，楚菜，京菜，津菜，冀菜，豫菜，客家菜等菜系。</p>
+       
 </div>
 </body>
 </html>
